--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "postcss-custom-media": "^7.0.8",
     "postcss-nested": "^4.2.1",
+    "postcss-selector-not": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
